<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/polytechorleans_couleur" />

            <TextView
                android:id="@+id/textView1"
                android:gravity="center_horizontal"
                android:text="@string/main_txt" />

        </TableRow>

    </TableLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:padding="5dip">

            <ImageButton
                android:id="@+id/ButtonWalker"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/description_pedestrian"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/pedestrian_man" />

            <ImageButton
                android:id="@+id/ButtonCar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/description_car"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/car_compact" />

        </TableRow>
    </TableLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:padding="5dip">

            <ImageButton
                android:id="@+id/ButtonGyro"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/description_gyro"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/light" />

            <ImageButton
                android:id="@+id/ButtonAlarm"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/description_alarm"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/alarm" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:padding="5dip">

            <ImageButton
                android:id="@+id/ButtonClose"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/description_close"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/close" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Co" />

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Deco"/>

    </LinearLayout>

</LinearLayout>




